--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
             <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <button class="btn">Explore More</button>
            </div>
-            <img class="img-1" src="/images/banner.png" alt="">
+            <img class="img-1" src="images/banner.png" alt="">
         </div>
     </header>
     <main>
         <section class="team display-flex">
             <div class="img-container">
-                <img src="/images/team1.png" alt="">
-                <img src="/images/team2.png" alt="">
-                <img src="/images/team3.png" alt="">
-                <img src="/images/team4.png" alt="">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
             </div>
             <div class="our-feture">
                 <h3 class="quick"><span id="quick-list" class="dark-03">Quick list</span> <span>of Our</span> <span class="text-primary">Features</span></h3>
@@ -68,34 +68,34 @@
                 <h4 class="fact-name">Awards Winnings</h4>
             </div>
             <div class="fact-card display-flex">
-                    <img src="/images/icons/projects.png" alt="" class="img-container">
+                    <img src="images/icons/projects.png" alt="" class="img-container">
                     <h4 class="fact-number">1458</h4>
                     <h4 class="fact-name">Project Finished</h4>
             </div>
             <div class="fact-card display-flex">
-                <img src="/images/icons/customers.png" alt="" class="img-container">
+                <img src="images/icons/customers.png" alt="" class="img-container">
                 <h4 class="fact-number">590</h4>
                 <h4 class="fact-name">Clients Worked</h4>
             </div>
             <div class="fact-card display-flex">
-                <img src="/images/icons/email.png" alt="" class="img-container">
+                <img src="images/icons/email.png" alt="" class="img-container">
                 <h4 class="fact-number">22578</h4>
                 <h4 class="fact-name">Email Send</h4>
             </div>
             </div>
         </section>
-        
+
          <section class="section-sponsor">
             <div class="Sponspors-info">
                 <h1 class="Sponspors-text">Our Sponspors</h1>
                 <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
             </div>
             <div class="img-sponsor">
-                <img src="/images/sponsors/spotify.png" alt="">
-                <img src="/images/sponsors/amazon.png" alt="">
-                <img src="/images/sponsors/google.png" alt="">
-                <img src="/images/sponsors/telerama.png" alt="">
-                <img src="/images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
             </div>
          </section>
 
